--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+serde-pickle = "1.1.1"
 serde_json = "1.0"
+sha256 = "1.5.0"
