--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde-pickle = "1.1.1"
+serde = "1.0"
 serde_json = "1.0"
-sha256 = "1.5.0"
+serde-pickle = "1.1.1"
+sha2 = "0.10.8"
+base64 = "0.21.5"
